FISH-8652: Downgrade lists in CPSubsystemImpl.